--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,7 +2,7 @@
 *= require blogs
 *= require pages
 *= require posts
-*= require main
+*= require_self
 *= require bootstrap-addon
 *= require hidden_styles
 
